--- a/site/.kobweb/conf.yaml
+++ b/site/.kobweb/conf.yaml
@@ -11,4 +11,9 @@ server:
       script: "build/distributions/chat-site.js"
       siteRoot: ".kobweb/site"
 
+  cors:
+    hosts:
+      - name: "temp-render-test.onrender.com"
+        schemes:
+          - "https"
   port: 8080
